--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/subpage.css">
-    <link media="screen and (max-width:1200px) and (min-width:768px)" rel="stylesheet" href="css/subpage_t.css">
-    <link media="screen and (max-width:767px)" rel="stylesheet" href="css/subpage_m.css">
+    <link media="screen and (max-width:1200px)" rel="stylesheet" href="css/subpage_t.css">
+    <!-- <link media="screen and (max-width:767px)" rel="stylesheet" href="css/subpage_m.css"> and (min-width:768px) -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <script src="js/includeHTML.js"></script>
