--- a/DrYouPBar.html
+++ b/DrYouPBar.html
@@ -24,7 +24,7 @@
             <div class="snb">
                 <ul>
                     <li><a href="DrYou.html">Dr.You</a></li>
-                    <li class="snb-list-dr"><a href="DrYouProduct.html">Dr.You 제품</a>
+                    <li class="snb-list-dr snb-list selected">Dr.You 제품
                         <div class="snb-list-dep2">
                             <a href="DrYouPBar.html">Dr.You 바</a>
                         </div>
