--- a/chocopie.html
+++ b/chocopie.html
@@ -23,7 +23,7 @@
             <h1>초코파이 하우스</h1>
             <div class="snb">
                 <ul>
-                    <li><a href="chocopie.html">제품 소개</a></li>
+                    <li class="selected"><a href="chocopie.html">제품 소개</a></li>
                     <li><a href="chocopieStore.html">점포 안내</a></li>
                 </ul>
             </div>
