--- a/faq.html
+++ b/faq.html
@@ -23,7 +23,7 @@
             <h1>고객센터</h1>
             <div class="snb">
                 <ul>
-                    <li>고객 의견 접수</li>
+                    <li class="selected">고객 의견 접수</li>
                 </ul>
             </div>
             <div class="content">
