--- a/header.html
+++ b/header.html
@@ -1,16 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/reset.css">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
-    <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/js.js"></script>
-</head>
-<body> -->
     <header>
         <a href="index.html"><div class="logo"></div></a>
         <a href="index.html"><div class="logo_m"></div></a>
@@ -131,35 +118,33 @@
         <div class="gnb-btn_m gnb-btn-bars_m"><i class="fas fa-bars"></i></div>
         <div class="gnb-btn_m gnb-btn-close_m"><i class="fas fa-times"></i></i></div>
         <ul class="gnb_m">
-            <li class="nav__depth1">새로운 제품
+            <li class="nav__depth1">새로운 제품<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="product.html">신제품/리뉴얼</a></div>
             </li>
-            <li class="nav__depth1">초코파이 하우스
+            <li class="nav__depth1">초코파이 하우스<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="chocopie.html">제품 소개</a></div>
                 <div class="nav__depth2"><a href="chocopieStore.html">점포 안내</a></div>
             </li>
-            <li class="nav__depth1">Market O
+            <li class="nav__depth1">Market O<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="marketO.html">MarketO 소개</a></div>
                 <div class="nav__depth2"><a href="marketONature.html">MarketO 네이쳐</a></div>
                 <div class="nav__depth2"><a href="marketOBaking.html">MarketO 제과</a></div>
             </li>
-            <li class="nav__depth1">Dr.You
+            <li class="nav__depth1">Dr.You<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="DrYou.html">Dr.You 소개</a></div>
                 <div class="nav__depth2"><a href="DrYouProduct.html">Dr.You 제품</a></div>
             </li>
-            <li class="nav__depth1">제주용암수
+            <li class="nav__depth1">제주용암수<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="jeju.html">제품 소개</a></div>
                 <div class="nav__depth2"><a href="jejuDelivery.html">가정 배송 안내</a></div>
             </li>
-            <li class="nav__depth1">고객센터
+            <li class="nav__depth1">고객센터<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="faq.html">고객 의견 접수</a></div>
             </li>
-            <li class="nav__depth1">회사소개
+            <li class="nav__depth1">회사소개<span><img src="images/down.png" alt="menudrop"> </span>
                 <div class="nav__depth2"><a href="orionIntro.html">오리온 소개</a></div>
                 <div class="nav__depth2"><a href="recruit.html">채용공고</a></div>
                 <div class="nav__depth2"><a href="orionLocation.html">오시는 길</a></div>
             </li>
         </ul>
     </header>    
-<!-- </body>
-</html>
