--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/swiper.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
@@ -11,6 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <script src="js/includeHTML.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/swiper.js"></script>
     <script src="js/js.js"></script>
     <title>ORION</title>
 </head>
@@ -32,15 +34,15 @@
             </div>
             <div class="content-list"><a href="product.html">오리온 파워 브랜드</a>
                 <div class="content"><img src="images/maincont1.jpg" alt="오리온 파워 브랜드"></div>
-                <div class="content_m"></div>
+                <div class="content_m">123</div>
             </div>
             <div class="content-list"><a href="chocopie.html">초코파이 하우스</a>
                 <div class="content"><img src="images/maincont2.jpg" alt="초코파이 하우스"></div>
-                <div class="content_m"></div>
+                <div class="content_m">2</div>
             </div>
             <div class="content-list"><a href="marketONgranola.html">Market O 네이쳐</a>
                 <div class="content"><img src="images/maincont3.jpg" alt="마켓오"></div>
-                <div class="content_m"></div>
+                <div class="content_m">3</div>
             </div>
             <div class="content-list"><a href="DrYou.html">Dr.You 닥터 유</a>
                 <div class="content"><img src="images/maincont4.jpg" alt="닥터유"></div>
@@ -62,16 +64,79 @@
             </div> 
         </div>
         <div class="inner_m">
-            <h1>BRAND</h1>
+            <h1>NEW</h1>
             <div class="banner_m banner-brand">
-                <div class="banner-img_m">
-                    <div></div>
-                    <div></div>
+                <div class="swiper-container2 swiper-brand">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                             <a href="product.html"><img src="images/product1.png" alt="브랜드제품"></a>
+                             <p>오!구마</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product2.png" alt="브랜드제품"></a>
+                            <p>오징어톡</p>
+                       </div>
+                       <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product3.png" alt="브랜드제품"></a>
+                            <p>고추칩</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product4.png" alt="브랜드제품"></a>
+                            <p>찡어젤리</p>
+                       </div>
+                       <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product5.png" alt="브랜드제품"></a>
+                            <p>단백질드링크</p>
+                       </div>
+                       <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product6.png" alt="브랜드제품"></a>
+                            <p>호떡품은 붕어빵</p>
+                       </div>
+                       <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product7.png" alt="브랜드제품"></a>
+                            <p>구운쌀칩</p>
+                        </div>
+                        <div class="swiper-slide">
+                            <a href="product.html"><img src="images/product8.png" alt="브랜드제품"></a>
+                            <p>미쯔볼 쿠앤크</p>
+                        </div>
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>    
                 </div>
-                <div class="banner-txt_m">
-                    <p>이것은 설명입니다. <br>설명입니다.</p>
-                    <p>이벤트에관한설명입니다.<br>설명입니다.</p>
-                </div>
+            </div>
+            <h1>EVENT</h1>
+            <div class="banner_m banner-event">
+               <div class="swiper-container">
+                   <div class="swiper-wrapper">
+                       <div class="swiper-slide">
+                            <img src="images/event1.jpg" alt="이벤트">
+                            <p>
+                                <strong>[꼬북칩을 시원~한 여름 간식으로!]</strong><br>
+                            꼬북칩 초코츄러스맛<br>더 맛있게 먹는 방법은?</p>
+                       </div>
+                       <div class="swiper-slide">
+                            <img src="images/event2.jpg" alt="이벤트">
+                            <p>
+                                <strong>[오리온 계정을 팔로우하세요]</strong><br>
+                                친구에게만 주는 선물<br>선물박스를 보내드려요!
+                            </p>
+                       </div>
+                       <div class="swiper-slide">
+                            <img src="images/event3.jpg" alt="이벤트">
+                            <p>
+                                <strong>[오늘부터 나도 민초단]</strong><br>인증하고 키트 선물 받아가자!
+                            </p>
+                       </div>
+                        <div class="swiper-slide">
+                            <img src="images/event4.jpg" alt="이벤트">
+                            <p>
+                                <strong>[캠핑왕 인증 이벤트]</strong><br>나만의 캠핑월드를 만들어<br>인증해보세요.
+                            </p>
+                       </div>         
+                   </div>   
+               </div>
+               <div class="swiper-pagination"></div>
             </div>
             <h1>SNS</h1>
             <div class="banner_m banner-sns">
@@ -96,22 +161,157 @@
                         <div class="modal-btn"></div>
                     </div>
                     <div class="modal m_modal">
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
-                        <div class="modal-cont m_modal-cont">d</div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta1.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta2.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 3,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta3.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,432개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta4.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta5.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 5,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta6.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 66,632개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta7.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta8.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,532개</strong></p>
+                            </div>
+                        </div>
+                        <div class="modal-cont m_modal-cont">
+                            <div class="insta-modal-img"><img src="images/insta9.jpg" alt="instagram"></div>
+                            <div class="insta-modal-txt">
+                                <p><strong>orion_global</strong></p>
+                                <p><strong>orion_global</strong><br>
+                                    상큼하게 Refresh!<br>
+                                    올여름 더위는 레몬 맛으로 극복!<br>
+                                    새콤 상큼 레몬 맛 초코파이 탄생!
+                                </p>
+                                <p>
+                                    <span><i class="far fa-heart"></i></span>
+                                    <span><i class="far fa-comment"></i></span>
+                                </p>
+                                <p><strong>좋아요 2,532개</strong></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
             <h1>COMPANY</h1>
             <div class="banner_m banner-company">
-                <div></div>
-                <div></div>
+                <a href="recruit.html"><div></div></a>
+                <a href="orionIntro.html"><div></div></a>
             </div>
         </div>
     </div>
