--- a/marketO.html
+++ b/marketO.html
@@ -23,12 +23,12 @@
             <h1>Market O</h1>
             <div class="snb">
                 <ul>
-                    <li><a href="marketO.html">마켓오 소개</a></li>
-                    <li class="snb-list-market"><a href="marketONature.html">마켓오 네이쳐</a>
+                    <li class="selected"><a href="marketO.html">마켓오 소개</a></li>
+                    <li class="snb-list-market snb-list">마켓오 네이쳐
                         <div class="snb-list-dep2"><a href="marketONGranola.html">오! 그래놀라</a></div>
                         <div class="snb-list-dep2"><a href="marketONGbar.html">오! 그래놀라 바</a></div>
                     </li>
-                    <li class="snb-list-market"><a href="marketOBaking.html">마켓오 제과</a>
+                    <li class="snb-list-market snb-list">마켓오 제과
                         <div class="snb-list-dep2"><a href="marketOBBrownie.html">리얼 브라우니</a></div>
                         <div class="snb-list-dep2"><a href="marketOBCracker.html">리얼 크래커</a></div>
                         <div class="snb-list-dep2"><a href="marketOBCheese.html">리얼 치즈칩</a></div>
