--- a/marketONGranola.html
+++ b/marketONGranola.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/subpage.css">
-    <link media="screen and (max-width:1200px)" rel="stylesheet" href="css/subpage_t.css">
-    <!-- <link media="screen and (max-width:767px)" rel="stylesheet" href="css/subpage_m.css"> and (min-width:768px) -->
+    <link media="screen and (max-width:1200px) and (min-width:768px)" rel="stylesheet" href="css/subpage_t.css">
+    <link media="screen and (max-width:767px)" rel="stylesheet" href="css/subpage_m.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <script src="js/includeHTML.js"></script>
@@ -24,11 +24,11 @@
             <div class="snb">
                 <ul>
                     <li><a href="marketO.html">마켓오 소개</a></li>
-                    <li class="snb-list-market"><a href="marketONature.html">마켓오 네이쳐</a>
+                    <li class="snb-list-market snb-list selected">마켓오 네이쳐
                         <div class="snb-list-dep2"><a href="marketONGranola.html">오! 그래놀라</a></div>
                         <div class="snb-list-dep2"><a href="marketONGbar.html">오! 그래놀라 바</a></div>
                     </li>
-                    <li class="snb-list-market"><a href="marketOBaking.html">마켓오 제과</a>
+                    <li class="snb-list-market snb-list">마켓오 제과
                         <div class="snb-list-dep2"><a href="marketOBBrownie.html">리얼 브라우니</a></div>
                         <div class="snb-list-dep2"><a href="marketOBCracker.html">리얼 크래커</a></div>
                         <div class="snb-list-dep2"><a href="marketOBCheese.html">리얼 치즈칩</a></div>
