--- a/product.html
+++ b/product.html
@@ -23,7 +23,7 @@
             <h1>새로운 제품</h1>
             <div class="snb">
                 <ul>
-                    <li>신제품/리뉴얼</li>
+                    <li class="selected">신제품/리뉴얼</li>
                 </ul>
             </div>
             <div class="content">
