--- a/recruit.html
+++ b/recruit.html
@@ -23,7 +23,10 @@
                 <h1>회사소개</h1>
                 <div class="snb">
                     <ul>
-                        <li class="snb-list-orion"><a href="orionIntro.html">오리온 소개</a>
+                        <li class="snb-list-orion snb-list">오리온 소개
+                            <div class="snb-list-dep2">
+                                <a href="orionIntro.html">회사연혁</a>
+                            </div>
                             <div class="snb-list-dep2">
                                 <a href="orionBusiness.html">윤리경영</a>
                             </div>
@@ -31,7 +34,7 @@
                                 <a href="orionSocial.html">사회공헌</a>
                             </div>
                         </li>
-                        <li><a href="recruit.html">채용공고</a></li>
+                        <li class="selected"><a href="recruit.html">채용공고</a></li>
                         <li><a href="orionLocation.html">오시는 길</a></li>
                     </ul>
                 </div>
