--- a/chocopieStore.html
+++ b/chocopieStore.html
@@ -24,7 +24,7 @@
             <div class="snb">
                 <ul>
                     <li><a href="chocopie.html">제품 소개</a></li>
-                    <li><a href="chocopieStore.html">점포 안내</a></li>
+                    <li class="selected"><a href="chocopieStore.html">점포 안내</a></li>
                 </ul>
             </div>
             <div class="content">
