--- a/jeju.html
+++ b/jeju.html
@@ -23,7 +23,7 @@
             <h1>제주 용암수</h1>
             <div class="snb">
                 <ul>
-                    <li><a href="jeju.html">제품 소개</a></li>
+                    <li class="selected"><a href="jeju.html">제품 소개</a></li>
                     <li><a href="jejuDelivery.html">가정 배송 안내</a></li>
                 </ul>
             </div>
