--- a/jejuDelivery.html
+++ b/jejuDelivery.html
@@ -25,7 +25,7 @@
             <div class="snb">
                 <ul>
                     <li><a href="jeju.html">제품 소개</a></li>
-                    <li><a href="jejuDelivery.html">가정 배송 안내</a></li>
+                    <li class="selected"><a href="jejuDelivery.html">가정 배송 안내</a></li>
                 </ul>
             </div>
             <div class="content">
