--- a/orionIntro.html
+++ b/orionIntro.html
@@ -23,7 +23,10 @@
             <h1>회사소개</h1>
             <div class="snb">
                 <ul>
-                    <li class="snb-list-orion"><a href="orionIntro.html">오리온 소개</a>
+                    <li class="snb-list-orion snb-list selected">오리온 소개
+                        <div class="snb-list-dep2">
+                            <a href="orionIntro.html">회사연혁</a>
+                        </div>
                         <div class="snb-list-dep2">
                             <a href="orionBusiness.html">윤리경영</a>
                         </div>
@@ -79,73 +82,6 @@
                             <img src="images/his6.gif" alt="회사소개">
                             <img src="images/his7.gif" alt="회사소개">
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="content_m">
-                <h1>오리온 소개</h1>
-                <div class="topmenu_m">
-                    <div class="topmenu-list_m">
-                        <div>회사 소개</div>
-                        <div>윤리 경영</div>
-                        <div>사회 공헌</div>
-                    </div>
-                </div>
-                <div class="main_m main1_m">
-                    <p><i class="fas fa-search-plus"></i> <span>빨간색 동그라미</span>를 클릭하면 자세한 설명을 볼 수 있습니다.</p>
-                <div class="history-title">
-                    <img src="images/his_title.gif" alt="회사소개">
-                </div>
-                <div class="history">
-                    <ul class="history-year">
-                        <li>1950s</li>
-                        <li>1960s</li>
-                        <li>1970s</li>
-                        <li>1980s</li>
-                        <li>1990s</li>
-                        <li>2000s</li>
-                        <li>2010s~</li>
-                    </ul>
-                    <div class="history-cont">
-                        <div class="timeline"></div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="timeline-point">
-                        </div>
-                        <div class="history-detail">
-                            <img src="images/his1.jpg" alt="회사소개">
-                            <img src="images/his2.jpg" alt="회사소개">
-                            <img src="images/his3.jpg" alt="회사소개">
-                            <img src="images/his4.jpg" alt="회사소개">
-                            <img src="images/his5.jpg" alt="회사소개">
-                            <img src="images/his6.gif" alt="회사소개">
-                            <img src="images/his7.gif" alt="회사소개">
-                        </div>
-                    </div>
-                </div>
-                </div>
-                <div class="main_m main2_m">
-                    <div class="company">
-                        <hr>
-                        <img src="images/ethic1.png" alt="윤리경영">
-                        <hr>
-                        <img src="images/ethic2.png" alt="윤리경영">
-                    </div>
-                </div>
-                <div class="main_m main3_m">
-                    <div class="company">
-                        <img src="images/scontribution.gif" alt="사회공헌">
-                        <img src="images/scontribution_txt.jpg" alt="사회공헌">
                     </div>
                 </div>
             </div>
