--- a/orionSocial.html
+++ b/orionSocial.html
@@ -23,7 +23,10 @@
             <h1>회사소개</h1>
             <div class="snb">
                 <ul>
-                    <li class="snb-list-orion"><a href="orionIntro.html">오리온 소개</a>
+                    <li class="snb-list-orion snb-list selected">오리온 소개
+                        <div class="snb-list-dep2">
+                            <a href="orionIntro.html">회사연혁</a>
+                        </div>
                         <div class="snb-list-dep2">
                             <a href="orionBusiness.html">윤리경영</a>
                         </div>
