--- a/DrYou.html
+++ b/DrYou.html
@@ -23,7 +23,7 @@
             <h1>Dr.You</h1>
             <div class="snb">
                 <ul>
-                    <li><a href="DrYou.html">Dr.You소개</a></li>
+                    <li class="selected"><a href="DrYou.html">Dr.You 소개</a></li>
                     <li class="snb-list-dr snb-list">Dr.You 제품
                         <div class="snb-list-dep2">
                             <a href="DrYouPBar.html">Dr.You 바</a>
