--- a/DrYouPDrink.html
+++ b/DrYouPDrink.html
@@ -23,8 +23,8 @@
             <h1>Dr.You</h1>
             <div class="snb">
                 <ul>
-                    <li>Dr.You</li>
-                    <li class="snb-list-dr snb-list selected"><a href="DrYouProduct.html">Dr.You 제품</a>
+                    <li><a href="DrYou.html">Dr.You 소개</a></li>
+                    <li class="snb-list-dr snb-list selected">Dr.You 제품
                         <div class="snb-list-dep2">
                             <a href="DrYouPBar.html">Dr.You 바</a>
                         </div>
