--- a/chocopie.html
+++ b/chocopie.html
@@ -28,19 +28,6 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="sub-header_m">
-                    <h1></h1>
-                    <ul>
-                        <li>
-                            <div></div>
-                            <div></div>
-                        </li>
-                        <li>
-                            <div></div>
-                            <div></div>
-                        </li>
-                    </ul>
-                </div>
                 <h2>제품 소개</h2>
                 <div class="depth">
                     <span>초코파이 하우스</span>
@@ -116,7 +103,7 @@
                         <p class="txt-center">신선한 프리미엄 재료로 만들어 유통기한이 짧으니<br>
                         냉장 보관하여 더욱 프레시하게 즐기세요.</p>
                     </div>
-                    <p class="txt-hover"><i class="fas fa-search-plus"></i> 초코파이 위에 마우스를 올려서 맛과 가격을 확인해 보세요.</p>   
+                    <p class="txt-hover"><i class="fas fa-search-plus"></i> 초코파이의 맛과 가격을 확인해 보세요.</p>   
                     <div class="chocopie-flavor chocopie">
                         <p class="txt-small">초코파이 하우스에서만 맛볼 수 있는</p>
                         <p class="txt-large">SPECIAL FLAVORS</p>
