--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <script src="js/includeHTML.js"></script>
     <script src="js/jquery-3.6.0.min.js"></script>
-    <script src="js/swiper.js"></script>
     <script src="js/js.js"></script>
     <title>ORION</title>
 </head>
@@ -32,25 +31,29 @@
                     </a>
                 </div>
             </div>
+            <div class="prev"><img src="images/page_arrow_left.png" alt="prev"></div>
+            <div class="next"><img src="images/page_arrow_right.png" alt="next"> </div>
+            <div class="content-list_m">
+                <a href="product.html"><img src="images/maincont1_m.jpg" alt="메인"></a>
+                <a href="chocopie.html"><img src="images/maincont2_m.jpg" alt="메인"></a>
+                <a href="marketO.html"><img src="images/maincont3_m.jpg" alt="메인"></a>
+                <a href="DrYou.html"><img src="images/maincont4_m.jpg" alt="메인"></a>
+                <a href="jeju.html"><img src="images/maincont5_m.jpg" alt="메인"></a>
+            </div>
             <div class="content-list"><a href="product.html">오리온 파워 브랜드</a>
                 <div class="content"><img src="images/maincont1.jpg" alt="오리온 파워 브랜드"></div>
-                <div class="content_m">123</div>
             </div>
             <div class="content-list"><a href="chocopie.html">초코파이 하우스</a>
                 <div class="content"><img src="images/maincont2.jpg" alt="초코파이 하우스"></div>
-                <div class="content_m">2</div>
             </div>
             <div class="content-list"><a href="marketONgranola.html">Market O 네이쳐</a>
                 <div class="content"><img src="images/maincont3.jpg" alt="마켓오"></div>
-                <div class="content_m">3</div>
             </div>
             <div class="content-list"><a href="DrYou.html">Dr.You 닥터 유</a>
                 <div class="content"><img src="images/maincont4.jpg" alt="닥터유"></div>
-                <div class="content_m"></div>
             </div>
             <div class="content-list"><a href="jeju.html">제주용암수</a>
                 <div class="content"><img src="images/maincont5.jpg" alt="제주용암수"></div>
-                <div class="content_m"></div>
             </div>
         </div>
         <div class="bottom-menubar">
@@ -317,7 +320,8 @@
     </div>
     <div include-html="footer.html"></div>
 </div>
-
     <script>includeHTML();</script>
+    <script src="js/swiper.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
