--- a/marketONGBar.html
+++ b/marketONGBar.html
@@ -50,37 +50,52 @@
                         <img src="images/granolabar4.png" alt="그래놀라" class="modal-btn">
                         <img src="images/granolabar5.png" alt="그래놀라" class="modal-btn">
                         <ul class="shelf-box-txt">
-                            <li>오!그래놀라 고래밥</li>
-                            <li>오!그래놀라 고래밥</li>
-                            <li>오!그래놀라 고래밥</li>
-                            <li>오!그래놀라 고래밥</li>
-                            <li>오!그래놀라 고래밥</li>
+                            <li>오!그래놀라 바 카카오</li>
+                            <li>오!그래놀라 바 단호박고구마</li>
+                            <li>오!그래놀라 바 검은콩</li>
+                            <li>오!그래놀라 바 무화가베리</li>
+                            <li>오!그래놀라 실속팩</li>
                         </ul>
                         <ul class="modal gran-modal">
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granolabar1.png" alt="그래놀라">
-                                <p>01 설명입니다.</p>
-                                <p>02 설명입니다.</p>
+                                <p>오!그래놀라바 카카오</p>
+                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                                    - 9가지 비타민과 무기질</p>
                             </li>
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granolabar2.png" alt="그래놀라">
-                                <p>11 설명입니다.</p>
-                                <p>12 설명입니다.</p>
+                                <p>오!그래놀라바 카카오</p>
+                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                                    - 9가지 비타민과 무기질</p>
                             </li>
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granolabar3.png" alt="그래놀라">
-                                <p>21 설명입니다.</p>
-                                <p>22 설명입니다.</p>
+                                <p>오!그래놀라바 카카오</p>
+                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                                    - 9가지 비타민과 무기질</p>
                             </li>
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granolabar4.png" alt="그래놀라">
-                                <p>1 설명입니다.</p>
-                                <p>2 설명입니다.</p>
+                                <p>오!그래놀라바 카카오</p>
+                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                                    - 9가지 비타민과 무기질</p>
                             </li>
                             <li class="modal-cont gran-modal-cont">
                                 <img src="images/granolabar5.png" alt="그래놀라">
-                                <p>1 설명입니다.</p>
-                                <p>2 설명입니다.</p>
+                                <p>오!그래놀라바 카카오</p>
+                                <p>- 리얼초코칩 6 %, 유산균볼 2 % 함유<br>
+                                    - 바삭하게 똘똘뭉친 3가지 건강한 곡물 (통귀리, 현미, 국산쌀)<br>
+                                    - 콕콕 박혀있는 상큼한 '유산균볼'<br>
+                                    - 9가지 비타민과 무기질</p>
                             </li>
                         </ul>
                     </div>
