--- a/orionIntro.html
+++ b/orionIntro.html
@@ -43,7 +43,7 @@
                 <div class="depth">
                     <span>회사소개</span><span>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;</span><span>오리온 소개</span>
                 </div>
-                <p><i class="fas fa-search-plus"></i> <span>빨간색 동그라미</span>를 클릭하면 자세한 설명을 볼 수 있습니다.</p>
+                <p class="pc"><i class="fas fa-search-plus"></i> <span>빨간색 동그라미</span>를 클릭하면 자세한 설명을 볼 수 있습니다.</p>
                 <div class="history-title">
                     <img src="images/his_title.gif" alt="회사소개">
                 </div>
@@ -83,6 +83,37 @@
                             <img src="images/his7.gif" alt="회사소개">
                         </div>
                     </div>
+                </div>
+                <div class="history_m">
+                    <ul>
+                        <li>
+                            <div>1950년대</div>
+                            <div><strong>창업기</strong><br>제과업계의 큰 별, 오리온 등장</div>
+                        </li>
+                        <li>
+                            <div>1960년대</div>
+                            <div><strong>성장기</strong><br>왕성한 신제품 개발로 인기 독점</div>
+                        </li>
+                        <li>
+                            <div>1970년대</div>
+                            <div><strong>위기의 극복</strong><br>최고의 히트상품, 오리온 초코파이 출시</div>
+                        </li>
+                        <li>
+                            <div>1980년대</div>
+                            <div><strong>도약준비기</strong><br>Smart한 회사로 재탄생한 오리온</div>
+                        <li>
+                            <div>1990년대</div>
+                            <div><strong>전환과 도약</strong><br>경영합리화로 최고의 제과회사 발판 마련</div>
+                        </li>
+                        <li>
+                            <div>2000년대</div>
+                            <div><strong>도전과 혁신</strong><br>Global Company로 발돋움하는 오리온</div>
+                        </li>
+                        <li>
+                            <div>2010년대</div>
+                            <div><strong>새로운 출발</strong><br>World-Class Company를 향하여</div>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
