--- a/product.html
+++ b/product.html
@@ -27,24 +27,11 @@
                 </ul>
             </div>
             <div class="content">
-                <div class="sub-header_m">
-                    <h1></h1>
-                    <ul>
-                        <li>
-                            <div></div>
-                            <div></div>
-                        </li>
-                        <li>
-                            <div></div>
-                            <div></div>
-                        </li>
-                    </ul>
-                </div>
                 <h2>신제품/리뉴얼</h2>
                 <div class="depth">
                     <span>새로운 제품</span></span>&nbsp;&nbsp;&nbsp;>&nbsp;&nbsp;&nbsp;</span></span>신제품/리뉴얼</span>
                 </div>
-                <p><i class="fas fa-search-plus"></i> 그림에 마우스를 올리면 자세한 설명을 볼 수 있습니다.</p>
+                <p><i class="fas fa-search-plus"></i>사진을 클릭해 보세요.</p>
                 <ul class="product">
                     <li class="product-list modal-btn">
                         <img src="images/product1.png" alt="제품1">
@@ -86,7 +73,7 @@
                         <p><strong>꿀버터 오!구마</strong></p>
                         <p>달콤~빠삭! 하구마 꿀버터 오!구마</p>
                         <p>
-                            구운 고구마에 꿀버터 한스푼! 달콤하게 코팅해 더 빠삭한 식감!
+                            구운 고구마에 꿀버터 한스푼!<br> 달콤하게 코팅해 더 빠삭한 식감!
                         </p>
                     </div>
                     <div class="modal-cont product-modal-cont ">
@@ -117,8 +104,7 @@
                             리얼한 오징어 모양에 '진짜'오징어 맛 젤리!<br><br>
                             <u>짭짤고소, 매콤달콤 2가지 맛을 동시에!</u><br>
                             그냥 먹으면 버터구이맛 찡어다리로 짭짤고소하게,<br>
-                            양념 스프를 넣고 SHAKE SHAKE! 흔들면 매콤달콤 고추장마요맛 찡어다리로 매콤달콤하게!<br><br>
-                            <u>맥주와도 찰떡궁합</u>
+                            양념 스프를 넣고 SHAKE SHAKE!
                         </p>
                     </div>
                     <div class="modal-cont product-modal-cont ">
@@ -128,9 +114,7 @@
                         <p>
                             달걀 2개 분량 단백질 드링크<br><br>
                             <u>단백질 카페라떼가 특별한 이유</u><br>
-                            1. 18종의 훌륭한 아미노산 프로필을 함유한 달걀 2개 분량의 우유단백질 12g 함유<br>
-                            2. 유청 비율을 낮추어 포만감을 높힌 우유단백질 함유<br>
-                            3. 당을 낮추어 부담없이 즐기는 닥터유드링크 단백질 카페라떼
+                            18종의 훌륭한 아미노산 프로필을 함유한 달걀 2개 분량의 우유단백질 12g 함유
                         </p>
                     </div>
                     <div class="modal-cont product-modal-cont ">
@@ -138,8 +122,7 @@
                         <p><strong>호떡 품은 참붕어빵</strong></p>
                         <p>길거리 대표간식 붕어빵과 호떡의 달콤한 만남!</p>
                         <p>
-                            1. 참붕어빵의 쫀득함과 달콤향긋한 호떡의 새로운 만남<br>
-                            2. 달콤한 호떡 소를 넣은 리얼한 호떡 맛 그대로<br><br>
+                            참붕어빵의 쫀득함과 달콤향긋한 호떡의 새로운 만남!<br>
                             ※ 전자레인지 8초, 또는 후라이팬에 기름을 살짝 둘러 구워 드시면 더욱 맛있습니다.
                         </p>
                     </div>
@@ -158,8 +141,7 @@
                         <p>맛도 모양도 새롭게! 미쯔볼 쿠키앤크림</p>
                         <p> 
                             작고 귀여운 '미쯔'를 새로운 볼 형태로 즐겁게 와그작!<br>
-                            진한 코코아 쿠키 '미쯔'에 부드러운 화이트 크림을 겹겹이 입혀 쿠키앤크림 맛 완성!<br>
-                            블랙칩으로 토핑을 한번 더 뿌려 더욱 진~하고 바삭하게!
+                            진한 코코아 쿠키 '미쯔'에 부드러운 화이트 크림을 겹겹이 입혀 쿠키앤크림 맛 완성!
                         </p> 
                     </div>
                 </div>
