--- a/recruit.html
+++ b/recruit.html
@@ -48,7 +48,7 @@
                         현재 진행 중인 채용이 없습니다.
                         </p>
                         <p>
-                        아래에 이메일을 입력하시면 채용 정보를 받아보실 수 있습니다.<br><br><br>
+                        아래에 이메일을 입력하시면<br>채용 정보를 받아보실 수 있습니다.<br><br><br>
                         <i class="fas fa-arrow-down"></i>
                         </p>
                         <input class="recruit-input" type="text" placeholder="이메일 주소 입력" name="email">
